--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 </head>
 <body class="bg-gray">
    <h2 class="text-center text-warning">Search Your Favorite Food</h2>
-
+<!-- meal search aria -->
   <div class="input-group mb-3 w-50 mx-auto">
       <input id="search-field" type="text" class="form-control" placeholder="Search the food you want" aria-label="search the food you want" aria-describedby="button-addon2">
       <button onclick = "searchFood()"class="btn btn-outline-secondary" type="button" id="button-search">search</button>
    </div>
+<!-- meal search result -->
+
+<div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
+</div>
+
+
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
    <script src="js/app.js"></script>
